# Holoren

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  cmd_line_params.txt  git_commands.txt  minimal.supp  perf_log.txt  usage_exmples.xml
HTConfigs/: .gitignore
HTConfigs/Basic/: DFtoHologram.xml  HoloPropagLarge.xml
HTConfigs/CorticalCafe_CGH/: HoloPropagLarge.xml  params.txt
HTConfigs/FITLogo/: DFtoHologramEditorHistory.xml  HoloPropagLarge.xml  HoloPropagLargeEditorHistory.xml
HTConfigs/LetterA/: DFtoHologram.xml  HoloPropagLarge.xml
HTConfigs/Making/: DFtoHologram.xml  HoloPropagLarge.xml
HTConfigs/Orig/: DFtoHologram.xml  HoloPropagLarge.xml
HTConfigs/tests/: DFtoHologram.xml  HoloPropagLarge.xml
cmake_modules/: FindLibXml2.cmake
df/: DFtoHologram.xml  HoloPropagLarge.xml  post_process.bat  post_process_and_verify.bat  post_process_and_verify.sh  verify.bat
doc/: Doxyfile  readme.txt
input/: 8points.xml  cube2.xml  cube_bad1.xml  cube_bad2.xml  cube_bad3.xml  cuboid1.xml  line1.xml  line_diagonal_3D.xml  line_horizontal3.xml  shapes.xml
input/img/: FIT.xcf
input/pc/: test_bad1_nan.pc  test_bad2_no_newline.pc  test_gutt.pc
input/real/: 2points.xml  F.xml  FIT2.xml  cuboid.xml  line_diagonal.xml  line_horizontal.xml  line_vertical.xml
input/test/: 1point.xml  1point_2.xml  cube1.xml  line_diagonal.xml  line_horizontal2.xml
input/xml/: 1point.xml  3points.xml  FIT.xml  cuboid.xml  cuboid_rotated_z.xml  line_rotated.xml  rotated_cube.xml  square.xml
perf_tests/: .gitignore  run_simple_renderers.bat  run_tests.bat  run_tests.sh
perf_tests/Ubuntu/: DFtoHologram_MultiPassCPU.xml  HoloPropagLarge_MultiPass.xml  HoloPropagLarge_MultiPassCPU.xml  perf_MultiPass.txt  perf_MultiPassCPU.txt  perf_MultiPassNative.txt
perf_tests/Ubuntu/test1/: perf_MultiPass.txt
perf_tests/Windows7/: DFtoHologram_MultiPass.xml  DFtoHologram_MultiPassCPU.xml  DFtoHologram_MultiPassNative.xml  DFtoHologram_Simple.xml  DFtoHologram_Simple_1024x1024.xml  HoloPropagLarge_MultiPassCPU.xml  HoloPropagLarge_MultiPassNative.xml  HoloPropagLarge_Simple.xml  HoloPropagLarge_Simple_1024x1024.xml  perf_MultiPass.txt  perf_MultiPassCPU.txt  perf_MultiPassNative.txt  perf_Simple.txt  perf_Simple_1024x1024.txt
scripts/: compare_png_with_1bit_bmp.m  convert_png_to_1bit_bmp.m  post_process.bat  post_process_and_verify.bat  verify.bat  verify_CGH.bat
src/: CBasePointCloudRW.cpp  CBasePointCloudRW.h  CBaseRenderer.h  CImagePointCloudRW.cpp  CImagePointCloudRW.h  COpenCLRenderer.cpp  COpenCLRenderer.h  COpticalField.cpp  COpticalField.h  CPCPointCloudRW.cpp  CPCPointCloudRW.h  CPointCloud.cpp  CPointCloud.h  CPointCloudRWFactory.cpp  CPointCloudRWFactory.h  CSharedDataPtr.h  CSimpleRenderer.cpp  CSimpleRenderer.h  CTimer.cpp  CTimer.h  CXMLPointCloudRW.cpp  CXMLPointCloudRW.h  Debug.cpp  Debug.h  Geometry.cpp  Geometry.h  IRenderer.h  Utils.cpp  Utils.h  config.h  global.h  main.cpp  ocl.cpp  ocl.h
src/OpenCL/: holoren.cl  holoren_debug.cl  holoren_obj_wave.cl  holoren_serial.cl  holoren_serial_dummy.cl  holoren_serial_optimized.cl  holoren_serial_optimized_big.cl
tests/: Makefile  test_CPCPointCloudRW.cpp  test_debug.cpp  test_ocl.cpp  test_ocl_selectDevice.cpp  test_optical_field.cpp  test_pcrw_factory.cpp  test_point_cloud_sampler.cpp  test_timer_unix.cpp  test_timer_win.cpp
tests/kernels/: hello.cl
tools/HTConfigManager/: .gitignore  HTConfigManager.pro
tools/HTConfigManager/src/: CConfigViewer.cpp  CConfigViewer.h  CConsoleWidget.cpp  CConsoleWidget.h  CDFtoHologramEditor.cpp  CDFtoHologramEditor.h  CHoloPropagLargeEditor.cpp  CHoloPropagLargeEditor.h  CImageViewer.cpp  CImageViewer.h  CMainWindow.cpp  CMainWindow.h  CPathPicker.cpp  CPathPicker.h  CSettingsDlg.cpp  CSettingsDlg.h  main.cpp
tools/post_process/: .gitignore  post_process.pro
tools/post_process/src/: CBaseEditor.h  CConfigViewer.cpp  CDFtoHologramEditor.cpp  CDFtoHologramEditor.h  CHoloPropagLargeEditor.cpp  CHoloPropagLargeEditor.h  CImageViewer.cpp  CImageViewer.h  CMainWindow.cpp  CMainWindow.h  CPathPicker.cpp  CPathPicker.h  main.cpp
